syntax = "proto3";
package dipstick.device.ina2xx.v1;

import "google/protobuf/timestamp.proto";

message State {
  optional google.protobuf.Timestamp timestamp = 1;
  optional float current = 2;
  optional float power = 3;
  optional float shunt_voltage = 5;
  optional float bus_voltage = 7;
  optional float temperature = 9;
  optional float energy = 11;
  optional float energy_joules = 13;
  optional float charge = 15;
  optional float charge_coulombs = 17;
}

message StateFlags {
  optional bool current = 1;
  optional bool power = 2;
  optional bool shunt_voltage = 3;
  optional bool bus_voltage = 4;
  optional bool temperature = 5;
  optional bool energy = 6;
  optional bool energy_joules = 7;
  optional bool charge = 8;
  optional bool charge_coulombs = 9;
}
