syntax = "proto3";
package dipstick.spi.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message DeviceInfo {
  uint64 device_id = 1;
  string path = 2;
  // u8
  optional uint32 bits_per_word = 3;
  optional uint32 max_speed_hz = 4;
  optional bool lsb_first = 5;
  optional ModeFlags mode = 6;
}

message ModeFlags {
  optional bool three_wire = 1;
  optional bool cpha = 2;
  optional bool cpol = 3;
  optional bool cs_high = 4;
  optional bool loop = 5;
  optional bool lsb_first = 6;
  optional bool mode_0 = 7;
  optional bool mode_1 = 8;
  optional bool mode_2 = 9;
  optional bool mode_3 = 10;
  optional bool no_cs = 11;
  optional bool ready = 12;
  optional bool rx_dual = 13;
  optional bool rx_quad = 14;
  optional bool tx_dual = 15;
  optional bool tx_quad = 16;
}

message TransferOptions {
  optional uint32 speed_hz = 1;
  // u16
  optional google.protobuf.Duration delay = 2;
  // u8
  optional uint32 bits_per_word = 3;
  // u8
  optional uint32 cs_change = 4;
  optional uint32 pad = 5;
}

message Transfer {
  google.protobuf.Timestamp timestamp = 1;
  TransferOptions options = 2;
  bytes tx = 3;
  bytes rx = 4;
}
